# persist

./: .copier-answers.yml  .eslintrc.js  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .pyrightconfig.json  .python-version  CHANGELOG.md  LICENSE.txt  README.md  RELEASE.md  Untitled.ipynb  bootstrap-local.sh  bootstrap.sh  build_all.mjs  commitlint.config.js  install.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.anywidget.json  tsconfig.json  vite.config.js  vite.config.mjs  vite.config.ts
.binder/: __environment.yml  postBuild  requirements.txt
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json  docker-compose.yml  post-start.sh
.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  docs-build.yml  publish-release.yml  update-integration-tests.yml
.husky/: pre-commit  prepare-commit-msg
binder/: environment.yml  no_run_postBuild  postBuild
docs-website/: .env  .env.github  README.md  docusaurus.config.ts  package.json  sidebars.ts
docs-website/docs/: introduction.md  simple-tutorial.md
examples/: Altair_Example_Gallery.ipynb  Demo.ipynb  Example_Gallery.ipynb  Getting Started.ipynb  NEW.ipynb  Test.ipynb  Tutorial.ipynb  Untitled.ipynb  avalanche_data.csv  avalanches_cleaned.csv  avalanches_ut.csv  basic_ext_test.ipynb  berkeley_calls_july_first_half.csv  binary_serialization_testsipynb  blog-Copy1.ipynb  blog.ipynb  blog_old.ipynb  blog_preproc.ipynb  category_test.ipynb  dev.ipynb  ext-python-test.ipynb  fire_dataset.ipynb  getting_started_composite_vega_altair_charts.ipynb  getting_started_interactive_data_table.ipynb  getting_started_plots_module.ipynb  getting_started_vega_altair.ipynb  test.ipynb  test_ext_ref.ipynb  test_ext_widget.ipynb
examples/_old/: Altair_Example_Gallery.ipynb  __avalanches_data.csv  avalanche_data_pre.csv  basic_ext_test.ipynb  ext-python-test.ipynb  fire_later.csv  table.ipynb
examples/plots/: bar-heatmap-composite.ipynb  barchart.ipynb  scatterplots.ipynb  sp_test.ipynb
examples/video/: _cars.ipynb  avalanches_data_.csv
intent-prediction/: pyproject.toml
intent-prediction/intent_prediction/: intent.py
interactivede/: .gitignore  .prettierignore  _.gitignore  __init__.py  commitlint.config.js  package.json  pyproject.toml  tsconfig.json
interactivede/.devcontainer/: bootstrap.sh
interactivede/binder/: environment.yml  postBuild
interactivede/ide/: __init__.py
interactivede/interactivede/: __init__.py
interactivede/internal/: __init__.py
interactivede/src/: constants.ts  index.ts
interactivede/style/: base.css  index.css  output-header.css  output-trrack.css
ip_lab/: .eslintrc.js  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
ip_lab/binder/: environment.yml  postBuild
ip_lab/ip-lab-ext-example/: __init__.py  handlers.py
ip_lab/ip_lab/: __init__.py
ip_lab/schema/: plugin.json
ip_lab/src/: index.ts
ip_lab/style/: base.css
ip_lab/ui-tests/: package.json
notebooks/: Test.ipynb  Untitled.ipynb  Untitled1.ipynb  basic_ext_test copy.json  basic_ext_test.ipynb  test.js  widget_test.ipynb
persist_ext/: __init__.py
persist_ext/extension/: __init__.py  apply.py  display_utils.py  enable_ext.py  intent_inference  intents.py  selections.py  utils.py
persist_ext/internals/: __init__.py  persist_magics.py  trrack_widget_base.py
reapply/: pyproject.toml
reapply-workflows/: pyproject.toml
reapply-workflows/reapply_workflows/: hi.py
reapply/reapply/: hi.py
reapply/src/reapply/apply/: __init__.py
schema/: console.json  plugin.json
scripts/: bump-ext-version.sh  bump-reapply-version.sh  test-version-validity.sh
src/: constants.ts  index.ts
src/cells/: TrrackVisComponent.tsx  index.ts  trrackableCell.ts  trrackableCellFactory.ts
src/commands/: index.ts
src/components/: AddCategoryPopup.tsx  (+10 more)
style/: base.css  index.css  output-area.css  output-header.css  output-trrack.css  trrack.css
tests/: __init__.py
trrack_nb_cells/: .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml
trracked_cells/: .eslintrc.js  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  tsconfig.json
trracked_cells/.github/workflows/: build.yml  check-release.yml
trracked_cells/binder/: environment.yml  postBuild
trracked_cells/jupyter-config/nb-config/: trracked_cells.json
trracked_cells/jupyter-config/server-config/: trracked_cells.json
trracked_cells/schema/: plugin.json
trracked_cells/src/: cell.tsx  factory.ts  handler.ts  index.ts  kernel.ts  rendered.ts  rendered.tsx
trracked_cells/src/cells/: trrackedCell.ts  trrackedInputPrompt.ts
trracked_cells/src/comms/: manager.ts  register.ts
trracked_cells/src/extension/: extension.ts
trracked_cells/src/extensions/: factoryPlugin.ts  plugin.ts
trracked_cells/src/factories/: trrackedCellFactory.ts
trracked_cells/src/manager/: context-manager.ts  index.ts
trracked_cells/src/misc/: OutputSidebar.tsx  TrrackedOutputPrompt.tsx  factory.ts  rendered.tsx
trracked_cells/src/notebook/: exec.ts  index.ts  restore.ts
trracked_cells/src/plugin/: extension.ts
trracked_cells/src/renderer/: index.ts  trrack-renderer.ts
trracked_cells/src/renderers/: mimetypes.ts  trrackGraphRenderer.tsx  trrackRenderer.ts
trracked_cells/src/trrack/: creator.ts  initTrrack.ts  manager.ts  setup.ts  trrack-manager.ts  trrack-vis.tsx  vis.tsx
trracked_cells/src/trracked-cell/: cell-manager.ts  cell.ts
trracked_cells/src/utils/: disposableSignals.ts  makeWriteable.ts
trracked_cells/style/: base.css  index.css  index.js  prompt.css
trracked_cells/trracked_cells/: __init__.py  comms.py  constants.py  handlers.py
trracked_cells/trracked_cells/comms/: comm.py  ext.py  manager.py  standardout.py
trracked_cells/trracked_cells/tests/: __init__.py  test_handlers.py
trracked_cells/trracked_cells/trrack/: chart.py  trrack.py  uicomm.py
trracked_cells/ui-tests/: package.json
trracked_cells/ui-tests/tests/: trracked_cells.spec.ts
(+428 files in other folders)
