[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persist-ext"
dynamic = ["version"]
description = 'A JupyterWidget for persisting interactions in cell outputs'
readme = "README.md"
requires-python = ">=3.8"
license-files = { paths = ["LICENSE.txt"] }
keywords = ["widget", "provenance", "interactive visualization", "visualization", "json", "trrack", "vega-lite", "altair"]
authors = [
  { name = "Kiran Gadhave", email = "kirangadhave2@gmail.com" },
]
maintainers = [
  { name = "Kiran Gadhave", email = "kirangadhave2@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typing_extensions>=4.0.1; python_version<\"3.11\"",
    "jinja2",
    # If you update the minimum required jsonschema version, also update it in build.yml
    "jsonschema>=3.0",
    "numpy",
    # If you update the minimum required pandas version, also update it in build.yml
    "pandas>=0.25",
    "toolz",
    "jupyterlab",
    "notebook",
    "ipython",
    "ipywidgets",
    "anywidget",
    "watchfiles",
    "lzstring",
    "copier~=7.2",
    "jinja2-time",
    "pydantic<2.0.0"
]

[project.urls]
Documentation = "https://github.com/unknown/persist#readme"
Issues = "https://github.com/unknown/persist/issues"
Source = "https://github.com/unknown/persist"


[tool.hatch.version]
path = "src/persist_ext/__about__.py"


[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black<24",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/persist_ext tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["persist_ext"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["persist_ext", "tests"]
branch = true
parallel = true
omit = [
  "src/persist_ext/__about__.py",
]

[tool.coverage.paths]
persist_ext = ["src/persist_ext", "*/persist/src/persist_ext"]
tests = ["tests", "*/persist/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
