[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "persist_ext"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "altair>=5",
    "jupyterlab>=4",
    "pandas>=0.25",
    "anywidget",
    "ipywidgets",
    "lzstring",
    "traittypes==0.2.1",
    "pyarrow",
    "fastparquet",
    "scikit-learn",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
dev = ["vega-datasets", "ruff"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["persist_ext/labextension", "persist_ext/static"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"persist_ext/labextension" = "share/jupyter/labextensions/persist_ext"
"install.json" = "share/jupyter/labextensions/persist_ext/install.json"

[tool.hatch.build.targets.wheel.force-include]
"persist_ext/static" = "persist_ext/static"

[tool.hatch.build]
artifacts=["persist_ext/static", "/static", "static"]

[tool.hatch.build.hooks.version]
path = "persist_ext/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "persist_ext/labextension/static/style.js",
    "persist_ext/labextension/package.json",
]
skip-if-exists = ["persist_ext/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "persist_ext/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab==4.0.4'",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.envs.default]
type = "virtual"
features = ["dev"]

[tool.hatch.envs.default.scripts]
watch_widgets = ["hatch run npx vite"]
run_lab = ["hatch run jlpm dev:lab"]
watch_extension = ["hatch run jlpm dev:ext"]
build_widgets = ["hatch run node build_all.mjs"]
build_extension = ["hatch run build_widgets && hatch run python -m build"]

[tool.hatch.envs.published]
dependencies = ["persist_ext==1.6.1rc1"]

[tool.hatch.envs.published.scripts]
run_lab = ["jupyter lab"]