[tool.poetry]
name = "reapply"
version = "0.1.1"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
intent-prediction = "^0.1.0"

[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
intent-prediction = {path = "../intent-prediction", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
