[tool.poetry]
name = "reapply"
version = "0.1.2"
description = ""
authors = ["Kiran Gadhave <kirangadhave2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
panel = "^0.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
